crates/rmcp-openapi/tests/snapshots/test_error_scenarios__array_type_validation_error.snap
---
source: crates/rmcp-openapi/tests/test_error_scenarios.rs
expression: error_json
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "status",
      "message": "\"available\" is not of type \"array\"",
      "field_path": "status",
      "actual_value": "available",
      "expected_type": "array"
    }
  ]
}
