crates/rmcp-openapi/tests/snapshots/test_error_scenarios__enum_validation_error.snap
---
source: crates/rmcp-openapi/tests/test_error_scenarios.rs
expression: error_json
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "status",
      "message": "\"invalid_status\" is not one of \"available\", \"pending\" or \"sold\"",
      "field_path": "status/0",
      "actual_value": [
        "invalid_status"
      ],
      "expected_type": "array"
    }
  ]
}
