crates/rmcp-openapi/tests/snapshots/test_error_scenarios__http_400_bad_request_error.snap
---
source: crates/rmcp-openapi/tests/test_error_scenarios.rs
expression: error_json
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "request_body",
      "message": "\"name\" is a required property",
      "field_path": "request_body",
      "actual_value": {
        "status": "invalid"
      },
      "expected_type": "object",
      "constraints": [
        {
          "type": "required",
          "properties": [
            "name",
            "photoUrls"
          ]
        }
      ]
    }
  ]
}
