crates/rmcp-openapi/tests/snapshots/test_error_scenarios__integer_for_string_validation_error.snap
---
source: crates/rmcp-openapi/tests/test_error_scenarios.rs
expression: error_json
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "request_body",
      "message": "12345 is not of type \"string\"",
      "field_path": "request_body/name",
      "actual_value": {
        "name": 12345,
        "photoUrls": [
          "https://example.com/photo.jpg"
        ],
        "status": "available"
      },
      "expected_type": "object",
      "constraints": [
        {
          "type": "required",
          "properties": [
            "name",
            "photoUrls"
          ]
        }
      ]
    }
  ]
}
