crates/rmcp-openapi/tests/snapshots/test_error_scenarios__null_value_for_optional_parameter.snap
---
source: crates/rmcp-openapi/tests/test_error_scenarios.rs
expression: error_json
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "request_body",
      "message": "Parameter 'request_body/status' is optional but must not be null (expected: object)",
      "field_path": "request_body/status",
      "actual_value": {
        "name": "doggie",
        "photoUrls": [
          "https://example.com/photo.jpg"
        ],
        "status": null
      },
      "expected_type": "object",
      "constraints": [
        {
          "type": "required",
          "properties": [
            "name",
            "photoUrls"
          ]
        }
      ]
    }
  ]
}
