crates/rmcp-openapi/tests/snapshots/test_error_scenarios__tool_not_found_multiple_suggestions.snap
---
source: crates/rmcp-openapi/tests/test_error_scenarios.rs
expression: error_json
---
{
  "type": "tool-not-found",
  "tool_name": "findPet",
  "suggestions": [
    "findPetsByStatus",
    "addPet"
  ]
}
