crates/rmcp-openapi/tests/snapshots/test_error_scenarios__type_validation_error.snap
---
source: crates/rmcp-openapi/tests/test_error_scenarios.rs
expression: error_json
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "petId",
      "message": "\"not_a_number\" is not of type \"integer\"",
      "field_path": "petId",
      "actual_value": "not_a_number",
      "expected_type": "integer",
      "constraints": [
        {
          "type": "minimum",
          "value": 1.0,
          "exclusive": false
        },
        {
          "type": "format",
          "format": "int64"
        }
      ]
    }
  ]
}
